# Practica1-Estructura-De-Datos

./: CMakeLists.txt  README.md  main.cpp
clases/carta/: Carta.cpp  Carta.h  CartaFlip.cpp  CartaFlip.h
clases/jugador/: Jugador.cpp  Jugador.h
clases/lista/lista-circular/: ListaCircular.cpp  ListaCircular.h
clases/lista/mazo-jugador/: ListaMazoFlipJugador.cpp  ListaMazoFlipJugador.h  ListaMazoJugador.cpp  ListaMazoJugador.h  NodoMano.cpp  NodoMano.h  NodoManoFlip.cpp  NodoManoFlip.h
clases/lista/mazo-lista/: MazoCartas.cpp  MazoCartas.h  MazoFlip.cpp  MazoFlip.h  NodoFlip.cpp  NodoFlip.h  NodoMazo.cpp  NodoMazo.h  PilaFlip.cpp  PilaFlip.h
configuracion-partida/: ConfiguracionPartida.cpp  ConfiguracionPartida.h
enums/: CartaColor.h  TipoCarta.h  ValorCarta.h
logica-juego/creacion-jugador/: CrearJugador.cpp  CrearJugador.h
logica-juego/efecto-cartas/: EfectoCartas.cpp  EfectoCartas.h  ReglasJuego.cpp  ReglasJuego.h
logica-juego/flujo-juego/: GritoUNO.cpp  GritoUNO.h  Juego.cpp  Juego.h  TurnosJuego.cpp  TurnosJuego.h
logica-juego/reglas/: ReglasJuego.cpp  ReglasJuego.h
logica-juego/reparticion-cartas/: ReparteCartasJugador.cpp  ReparteCartasJugador.h
objetos/carta/: Carta.cpp  Carta.h
objetos/jugador/: jugador.cpp  jugador.h
objetos/lista/lista-circular/: ListaCircular.cpp  ListaCircular.h
objetos/lista/mazo-lista/: MazoCartas.cpp  MazoCartas.h  MazoLista.cpp  MazoLista.h  PilaMazo.cpp  PilaMazo.h
utils/: CentrarTexto.cpp  CentrarTexto.h  LimpiarPantalla.cpp  LimpiarPantalla.h  UtilColorCarta.cpp  UtilColorCarta.h  UtilTipoCarta.cpp  UtilTipoCarta.h  UtilValorCarta.cpp  UtilValorCarta.h
